fix header alignment in phone view

--- a/healthdeclaration.css
+++ b/healthdeclaration.css
@@ -336,10 +336,12 @@ hr {
     }
 
     header {
-    	font-size: 16px;
-    	color: #4A4A4A;
-    	text-align: center;
-    	padding: 20px;
+        font-size: 16px;
+        color: #4A4A4A;
+        text-align: center;
+        padding: 10px;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
 
     .pg2Header {
